added something to th list

--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
             <ul>
                 <li>Bricks</li>
                 <li>Mortar</li>
+                <li>Cement</li>
             </ul>
         </div>
     </body>
